samples/_failures_safe/1761436454_db065f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90459a70.c: In function ‘main’:
./samples/SAFE/__tmp_90459a70.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_90459a70.c:160:9: error: expected declaration or statement at end of input
  160 |         if
      |         ^~
./samples/SAFE/__tmp_90459a70.c:160:9: error: expected declaration or statement at end of input
